--- a/Nameste-react/src/Components/RestaurentCard.module.css
+++ b/Nameste-react/src/Components/RestaurentCard.module.css
@@ -6,10 +6,20 @@
     margin-bottom: 1rem;
     width: 100%;
   }
+
+  .imgContainer{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    overflow: hidden;
+    filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 2px 8px);
+  }
   
   .image {
-    width: 100%;
-    height: auto;
+    width: 250px;
+    height: 200px;
+    object-fit: cover;
   }
   
   .details {
